--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -1,3 +1,5 @@
+@import url(droparea.css);
+
 input,
 textarea,
 select {
@@ -21,7 +23,9 @@ label {
 
 input:focus,
 select:focus,
-textarea:focus {
+textarea:focus,
+input[type="date"]
+:focus-within {
     outline: .25rem solid var(--surface-secondary);
     border: .125rem solid var(--stroke-hightlight);
     outline-offset: .1px;
